--- a/myStyleOFcv.css
+++ b/myStyleOFcv.css
@@ -1,7 +1,7 @@
 img{
 	width: 20vh;
     border-radius: 90%;
-    border: 5px solid #353E4D;
+    border: 5px solid white;
     margin-top: 1vh;
     margin-left: 5vw;
     margin-right: 5vw;
